<resources>
    <string name="app_name">LPD</string>
    <string name="pie_chart_name">Create Pie Chart</string>
    <string name="bar_chart_name">Create Bar Chart</string>
    <string name="line_chart_name">Create Line Chart</string>
    <string name="back_name">Back</string>
    <string name="create_name">Create</string>
    <string name="add_value_name">Add Value</string>
    <string name="name_hint">Name</string>
    <string name="value_hint">Value</string>
    <string name="position_hint">Position</string>
    <string name="edit_data">Edit</string>
    <string name="num">1</string>
    <dimen name="cell_margin">2dp</dimen>
    <dimen name="btn_margin">10dp</dimen>
</resources>